<resources>
    <string name="app_name">TeleMarket</string>
    <string name="welcome">Welcome!</string>
    <string name="app_intro">This app is a companion app to telegram. It allows you to view a group chat as a store to facilitate easy exchange. You must be using the telegram app already to continue</string>
    <string name="confirm">I understand</string>
    <string name="number_request">Please enter your phone number starting with the country code</string>
    <string name="access_code_request">Please enter the access code sent to your existing telegram installation</string>
    <string name="message_text">Telemarket Post</string>
    <string name="app_intent"> I designed this app to allow people to better manage their local groups bartering and event planning. You can contact me at @robo_cam on telegram or visit the telegram channel telemarket_buysell for more information.</string>
    <string name="privacy_policy">My normal privacy policy explains tha I have no intention of harvesting or collecting your data but that I can\'t guarantee it\'s security. I think that this is still true with this app. I really like telegram and recommend it to everyone. But in my personal opinion you can\' rely on privacy when using a computer. If your worried about my app vs telegram itself then please feel free to browse github and search cagney moreau to view the code with a brief explanation of how it works. </string>
    <string name="contacts_title">Contacts</string>
    <string name="newgroup_title">New Group</string>
    <string name="namegroup_title">Name Group</string>
    <string name="submit">Submit</string>
    <string name="info">Info</string>
    <string name="mobile">Mobile</string>
    <string name="unknown">unknown</string>
    <string name="username">Username</string>
    <string name="notifications">Notifications</string>

</resources>