<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <include
        android:id="@+id/profile_contactcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/contacts_card" />

    <TextView
        android:id="@+id/profile_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textColor="@color/text_neutral"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/profile_contactcard"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textColor="@color/text_neutral"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/profile_info"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/profile_phone_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:textColor="@color/text_neutral"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/profile_phone"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textColor="@color/text_neutral"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/profile_phone_tag"
        app:layout_constraintStart_toStartOf="parent"

        />
    <TextView
        android:id="@+id/profile_username_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/text_neutral"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/profile_username"
        app:layout_constraintStart_toStartOf="parent"

        />
    <TextView
        android:id="@+id/profile_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textColor="@color/text_neutral"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/profile_username_tag"
        app:layout_constraintStart_toStartOf="parent"

        />
    <TextView
        android:id="@+id/profile_notifications_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textColor="@color/text_neutral"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/profile_notifications"
        app:layout_constraintStart_toStartOf="parent"

        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_message_24"
        android:contentDescription="@string/submit"
        android:layout_margin="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>